--- a/index.html
+++ b/index.html
@@ -8,7 +8,19 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <nav></nav>
+        <nav class="main_menu">
+           <ul>
+               <li>
+                    <a href="#">1</a>
+               </li>
+               <li>
+                    <a href="#">2</a>
+               </li>
+               <li>
+                   <a href="#">3</a>
+               </li>
+           </ul>
+        </nav>
         <section></section>
         <section></section>
         <section></section>
