--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                </li>
            </ul>
         </nav>
-        <section></section>
-        <section></section>
-        <section></section>
+        <section class="sec_red"></section>
+        <section class="sec_green"></section>
+        <section class="sec_yellow"></section>
     </body>
 </html>
