add imgs + titles in section

--- a/index.html
+++ b/index.html
@@ -11,18 +11,30 @@
         <nav class="main_menu">
            <ul>
                <li>
-                    <a href="#">1</a>
+                    <a href="#sec_red">1</a>
                </li>
                <li>
-                    <a href="#">2</a>
+                    <a href="#sec_green">2</a>
                </li>
                <li>
-                   <a href="#">3</a>
+                   <a href="#sec_yellow">3</a>
                </li>
            </ul>
         </nav>
-        <section class="sec_red"></section>
-        <section class="sec_green"></section>
-        <section class="sec_yellow"></section>
+        <section id="sec_red">
+            <div class="contain_img"><img src="img/01.png" alt="shoes">
+                <h1>IL NOSTRO MODELLO DI PUNTA</h1>
+            </div>
+        </section>
+        <section id="sec_green">
+            <div class="contain_img"><img src="img/02.png" alt="shoes">
+                <h1>IL NOSTRO MODELLO DI PUNTA</h1>
+            </div>
+        </section>
+        <section id="sec_yellow">
+            <div class="contain_img"><img src="img/03.png" alt="shoes">
+                <h1>IL NOSTRO MODELLO DI PUNTA</h1>
+            </div>
+        </section>
     </body>
 </html>
