add img + title in center + fonts

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>htmlcss-shoes</title>
         <link rel="stylesheet" href="css/style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap" rel="stylesheet">
     </head>
     <body>
         <nav class="main_menu">
@@ -22,18 +25,21 @@
            </ul>
         </nav>
         <section id="sec_red">
-            <div class="contain_img"><img src="img/01.png" alt="shoes">
-                <h1>IL NOSTRO MODELLO DI PUNTA</h1>
+            <div class="contain_img">
+                <img src="img/01.png" alt="shoes">
+                <h1>IL NOSTRO MODELLO<br> DI PUNTA</h1>
             </div>
         </section>
         <section id="sec_green">
-            <div class="contain_img"><img src="img/02.png" alt="shoes">
-                <h1>IL NOSTRO MODELLO DI PUNTA</h1>
+            <div class="contain_img">
+                <img src="img/02.png" alt="shoes">
+                <h1>IL NOSTRO MODELLO<br> DI PUNTA</h1>
             </div>
         </section>
         <section id="sec_yellow">
-            <div class="contain_img"><img src="img/03.png" alt="shoes">
-                <h1>IL NOSTRO MODELLO DI PUNTA</h1>
+            <div class="contain_img">
+                <img src="img/03.png" alt="shoes">
+                <h1>IL NOSTRO MODELLO<br> DI PUNTA</h1>
             </div>
         </section>
     </body>
